[package]
name = "endless-sea"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.endless-sea]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = { version = "0.8.1" }
bevy-inspector-egui = "*"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
image = "0.24.3"
winit = "0.26.1"
