[package]
name = "endless-sea"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["launchers/wasm", "launchers/native"]

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.endless-sea]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = { version = "0.9.1" }
bevy-inspector-egui = "0.14"
bevy_rapier3d = { version = "0.19", features = ["simd-stable"] }
image = "0.24.4"
winit = "*"
leafwing-input-manager = "0.7"
bevy_polyline = "0.4"
opensimplex_noise_rs = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
more-asserts = "0.3.1"
