[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
endless-sea = { package = "endless-sea", path = "../.." }
bevy = { version = "0.9.1" }
web-sys = { version="0.3.61", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.12.0", features=["yew_integration"] }