[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
endless-sea = { package = "endless-sea", path = "../.." }
bevy = { version = "0.11" }
web-sys = { version = "0.3.68", features = ["Document", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
